Fixed jpackage launch of sdvx_helper